--- a/leetcode/433/index.html
+++ b/leetcode/433/index.html
@@ -61,7 +61,7 @@ Example 1:'><script type=application/ld+json>{"@context":"https://schema.org","@
 </span></span><span style=display:flex><span>    }
 </span></span><span style=display:flex><span>    <span style=color:#66d9ef>return</span> <span style=color:#f92672>-</span><span style=color:#ae81ff>1</span>;
 </span></span><span style=display:flex><span>}
-</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/2831/><span class=title>« 上一頁</span><br><span>[LeetCode] 2831. Find the Longest Equal Subarray</span>
+</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/2271/><span class=title>« 上一頁</span><br><span>[LeetCode] 2271. Maximum White Tiles Covered by a Carpet</span>
 </a><a class=next href=https://intervalrain.github.io/leetcode/2131/><span class=title>下一頁 »</span><br><span>[LeetCode] 2131. Longest Palindrome by Concatenating Two Letter Words</span></a></nav></footer><script src=https://utteranc.es/client.js repo=Reid00/hugo-blog-talks issue-term=pathname label=Comment theme=github-light crossorigin=anonymous async></script></article></main><footer class=footer><span>&copy; 2025 <a href=https://intervalrain.github.io/>Rain Hu's Workspace</a></span> ·
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
